--- a/src/App.css
+++ b/src/App.css
@@ -37,13 +37,46 @@
   }
 }
 
-.u-flex {
+.u-flex-col {
   display: flex;
   flex-direction: column;
   flex: 1;
   height: 100%;
   width: 100%;
   position: absolute;
+  align-items: center;
+  justify-content: center;
+}
+
+.u-flex-row {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+}
+
+.u-flex-inner {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  height: 90%;
+  width: 90%;
+  position: absolute;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  margin-left: 24px;
+  margin-right: 24px;
+}
+
+.loading-spinner {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
 }
 
 .grid-container {
@@ -57,4 +90,13 @@
 .hamburger-padding {
   padding-top: 24px;
   padding-bottom: 24px;
+}
+
+.searchbox {
+  margin-top: 24px;
+}
+
+.hamburger-margin {
+  margin-bottom: 12px;
+  margin-top: 12px;
 }
