--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,6 @@
   flex-direction: row;
   flex: 1;
   height: 100%;
-  width: 100%;
   align-items: center;
 }
 
@@ -62,7 +61,7 @@
   flex-direction: column;
   flex: 1;
   height: 90%;
-  width: 90%;
+  width: 80%;
   position: absolute;
   margin-top: 24px;
   margin-bottom: 24px;
@@ -99,4 +98,8 @@
 .hamburger-margin {
   margin-bottom: 12px;
   margin-top: 12px;
+}
+
+.right-margin {
+  margin-right: 12px;
 }
