--- a/src/App.css
+++ b/src/App.css
@@ -86,11 +86,6 @@
   height: 100%;
 }
 
-.hamburger-padding {
-  padding-top: 24px;
-  padding-bottom: 24px;
-}
-
 .searchbox {
   margin-top: 24px;
 }
@@ -102,4 +97,8 @@
 
 .right-margin {
   margin-right: 12px;
+}
+
+.stack-x {
+  margin-right: 48px;
 }
